--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,7 @@ branches:
 build: off
 
 install:
-  - $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-ibank-build-for-testers.jar" -PassThru
+  - java -jar ./artifacts/app-ibank-build-for-testers.jar -P:profile=test &
 
 build_script:
   - chmod +x gradlew
